<resources>
    <string name="app_name">Practice</string>
    <string name="name">Name</string>
    <string name="save">save</string>
    <string name="logo">logo</string>
    <string name="settings">Settings</string>
    <string name="_0">0</string>
    <string name="play_now">Play Now</string>
    <string name="how_to_play">HOW TO PLAY</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="how_to_play_head">How To Play</string>
    <string name="language">Language</string>
    <string name="back"><![CDATA[<]]></string>
</resources>
