<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hala.practice.Option"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#fdfdfe"
            android:textSize="20sp"
            android:fontFamily="@font/sourcesanspro_bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:orientation="horizontal">




            <ImageView
                android:contentDescription="@string/logo"
                android:id="@+id/logo_picker"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/avatar_1"/>



            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:background="@drawable/text_view_circle"
                android:gravity="center"
                android:textColor="#fdfdfe"
                android:textColorHint="#7dfdfdfe" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </LinearLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="Save"
            android:text="@string/save" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
