<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hala.practice.MainActivity"
    android:background="@drawable/background">



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/avatar_1" />

            <TextView
                android:id="@+id/main_name"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/main_name_b"
                android:fontFamily="@font/sourcesanspro_regular"
                android:gravity="center"
                android:text=""
                android:textColor="#fdfdfe"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/score"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/main_coins_b"
                android:fontFamily="@font/sourcesanspro_bold"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="#fdfdfe"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/coins"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/gold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/line1"
                    android:layout_width="72dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#fdfdfe"
                    android:gravity="center"
                    android:text="" />

                <TextView
                    android:id="@+id/play_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/sourcesanspro_bold"
                    android:gravity="center"
                    android:text="@string/play_now"
                    android:textColor="#fdfdfe"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/line2"
                    android:layout_width="72dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="#fdfdfe"
                    android:gravity="center"
                    android:text="" />

            </LinearLayout>

            <ImageView
                android:id="@+id/new_game"
                android:src="@drawable/durak"
                android:layout_width="210dp"
                android:layout_height="270dp"
                android:onClick="newgame" />

            <TextView
                android:id="@+id/line3"
                android:layout_width="250dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="#fdfdfe"
                android:text="" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/how"
                    android:layout_width="155dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/howtoplay"
                    android:fontFamily="@font/sourcesanspro_bold"
                    android:gravity="center"
                    android:text="@string/how_to_play"
                    android:textColor="#fdfdfe"
                    android:textSize="25sp"
                    android:onClick="how"/>

                <ImageView
                    android:id="@+id/settings"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/stroke"
                    android:onClick="option"
                    app:srcCompat="@drawable/settings"
                    />

            </LinearLayout>

        </LinearLayout>

</android.support.constraint.ConstraintLayout>
